sory za node modules

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,6 +3,7 @@
 
 FROM node:latest as builder
 
+
 WORKDIR /app
 
 COPY package.json ./
@@ -14,6 +15,7 @@ COPY index.js ./
 RUN npm run build
 
 
+
 # stage 2 
 
 FROM alpine:latest
@@ -22,13 +24,17 @@ RUN apk update && apk upgrade && apk add --update nodejs npm
 
 WORKDIR /app
 
+ARG PORT
+
+ENV PORT=$PORT
+
 COPY --from=builder /app/package.json ./
 
 RUN npm i 
 
 COPY --from=builder /app/index.min.js ./
 
-CMD ["node", "index.min.js"]
+CMD ["node", "index.min.js", "--port=$PORT" ]
 
 EXPOSE 3030
 
